# scrubble

./: Cargo.toml
game/: Cargo.toml
game/benches/: bitboard.rs
game/proptest-regressions/bitboard/: mod.txt
game/src/: lib.rs
game/src/bitboard/: avx2.rs  mod.rs  scalar.rs
game/src/board/: mod.rs
scrubble/: Cargo.toml
src/: lib.rs  main.rs
src/bitboard/: mod.rs
src/board/: mod.rs
