[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
paste = "1.0.15"
safe_arch = "0.7.2"

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4.0"
proptest = "1.5.0"

[[bench]]
name = "bitboard"
harness = false
